--- a/controller-server/front/static/style.css
+++ b/controller-server/front/static/style.css
@@ -13,6 +13,11 @@ body{
   flex-direction: row;
   justify-content: center;
 }
+.image-container{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
 .camera{
   box-sizing: border-box;
   width: 100%;
